--- a/infra.yml
+++ b/infra.yml
@@ -1,103 +1,87 @@
- 
 Parameters:
 
     EnvironmentName:
-        Description: An environment name that will be prefixed to resource names
         Type: String
-
-    VpcCIDR: 
-        Description: Please enter the IP range (CIDR notation) for this VPC
-        Type: String
-        Default: 10.0.0.0/16
-
+    VpcCIDR:
+        Description: ip range(CIDR notation)
+        Type: String        
     PublicSubnet1CIDR:
-        Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone
-        Type: String
-        Default: 10.0.0.0/24
-
-    PublicSubnet2CIDR:
-        Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
-        Type: String
-        Default: 10.0.1.0/24
-
+        Description: ip range for subnet 1
+        Type: String        
+    PublicSubnet2CIDR: 
+        Description: ip range for subnet 2
+        Type: String                
     PrivateSubnet1CIDR:
-        Description: Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone
-        Type: String
-        Default: 10.0.2.0/24
-
+        Description: ip range for subnet 1
+        Type: String        
     PrivateSubnet2CIDR:
-        Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone
-        Type: String
-        Default: 10.0.3.0/24
+        Description: ip range for subnet 2
+        Type: String        
 
 Resources:
-# creating a virtual private cloud
-    VPC: 
+
+    VPC:
         Type: AWS::EC2::VPC
         Properties:
-            CidrBlock: !Ref VpcCIDR
-            EnableDnsHostnames: true
-            Tags: 
-                - Key: Name 
-                  Value: !Ref EnvironmentName
-        
-    InternetGateway:
+          CidrBlock: !Ref VpcCIDR
+          EnableDnsHostnames: true
+          Tags:
+              - Key: Name
+                Value: !Ref EnvironmentName
+
+    PrivateSubnet1:
+        Type: AWS::EC2::Subnet
+        Properties:
+          VpcId: !Ref VPC 
+          AvailabilityZone: !Select [ 0, !GetAZs '' ]
+          CidrBlock: !Ref PrivateSubnet1CIDR
+          MapPublicIpOnLaunch: false
+          Tags: 
+              - Key: Name
+                Value: !Sub ${EnvironmentName} Private Subnet (AZ1)
+
+    PrivateSubnet2:
+        Type: AWS::EC2::Subnet
+        Properties:
+          VpcId: !Ref VPC
+          AvailabilityZone: !Select [ 1, !GetAZs '' ]
+          CidrBlock: !Ref PrivateSubnet2CIDR
+          MapPublicIpOnLaunch: false
+          Tags: 
+              - Key: Name
+                Value: !Sub ${EnvironmentName} Private Subnet (AZ2)
+    
+    PublicSubnet1:
+        Type: AWS::EC2::Subnet
+        Properties:
+          VpcId: !Ref VPC 
+          AvailabilityZone: !Select [ 0, !GetAZs '' ]
+          CidrBlock: !Ref PublicSubnet1CIDR
+          MapPublicIpOnLaunch: true
+          Tags: 
+              - Key: Name
+                Value: !Sub ${EnvironmentName} Public Subnet (AZ1)
+
+    PublicSubnet2:
+        Type: AWS::EC2::Subnet
+        Properties:
+          VpcId: !Ref VPC
+          AvailabilityZone: !Select [ 1, !GetAZs '' ]
+          CidrBlock: !Ref PublicSubnet2CIDR
+          MapPublicIpOnLaunch: true
+          Tags: 
+              - Key: Name
+                Value: !Sub ${EnvironmentName} Public Subnet (AZ2)
+   #CREATING THE INTERNET GATEWAY
+    InternetGateway: 
         Type: AWS::EC2::InternetGateway
-        Properties:
-            Tags:
-                - Key: Name
-                  Value: !Ref EnvironmentName
-            
+
     InternetGatewayAttachment:
-        Type: AWS::EC2::VPCGatewayAttachment
-        Properties:
-            InternetGatewayId: !Ref InternetGateway
-            VpcId: !Ref VPC
- #both public and private subnets.
-    PublicSubnet1: 
-        Type: AWS::EC2::Subnet
-        Properties:
-            VpcId: !Ref VPC
-            AvailabilityZone: !Select [ 0, !GetAZs '' ]
-            CidrBlock: !Ref PublicSubnet1CIDR
-            MapPublicIpOnLaunch: true
-            Tags: 
-                - Key: Name 
-                  Value: !Sub ${EnvironmentName} Public Subnet (AZ1)
+        Type:  AWS::EC2::VPCGatewayAttachment 
+        Properties: 
+          VpcId: !Ref VPC 
+          InternetGatewayId: !Ref InternetGateway
 
-    PublicSubnet2: 
-        Type: AWS::EC2::Subnet
-        Properties:
-            VpcId: !Ref VPC
-            AvailabilityZone: !Select [ 1, !GetAZs '' ]
-            CidrBlock: !Ref PublicSubnet2CIDR
-            MapPublicIpOnLaunch: true
-            Tags: 
-                - Key: Name 
-                  Value: !Sub ${EnvironmentName} Public Subnet (AZ2)
-
-    PrivateSubnet1: 
-        Type: AWS::EC2::Subnet
-        Properties:
-            VpcId: !Ref VPC
-            AvailabilityZone: !Select [ 0, !GetAZs '' ]
-            CidrBlock: !Ref PrivateSubnet1CIDR
-            MapPublicIpOnLaunch: false
-            Tags: 
-                - Key: Name 
-                  Value: !Sub ${EnvironmentName} Private Subnet (AZ1)
-
-    PrivateSubnet2: 
-        Type: AWS::EC2::Subnet
-        Properties:
-            VpcId: !Ref VPC
-            AvailabilityZone: !Select [ 1, !GetAZs '' ]
-            CidrBlock: !Ref PrivateSubnet2CIDR
-            MapPublicIpOnLaunch: false
-            Tags: 
-                - Key: Name 
-                  Value: !Sub ${EnvironmentName} Private Subnet (AZ2)
-                  #gateways to allow inbound and outbound traffic 
     NatGateway1EIP:
         Type: AWS::EC2::EIP
         DependsOn: InternetGatewayAttachment
@@ -121,6 +105,7 @@ Resources:
         Properties:
             AllocationId: !GetAtt NatGateway2EIP.AllocationId
             SubnetId: !Ref PublicSubnet2
+          #ROUTING TABLE 
     PublicRouteTable:
         Type: AWS::EC2::RouteTable
         Properties: 
@@ -128,7 +113,7 @@ Resources:
             Tags: 
                 - Key: Name 
                   Value: !Sub ${EnvironmentName} Public Routes
-# creating the route table for subnets
+
     DefaultPublicRoute: 
         Type: AWS::EC2::Route
         DependsOn: InternetGatewayAttachment
@@ -136,7 +121,7 @@ Resources:
             RouteTableId: !Ref PublicRouteTable
             DestinationCidrBlock: 0.0.0.0/0
             GatewayId: !Ref InternetGateway
-
+    
     PublicSubnet1RouteTableAssociation:
         Type: AWS::EC2::SubnetRouteTableAssociation
         Properties:
@@ -148,8 +133,6 @@ Resources:
         Properties:
             RouteTableId: !Ref PublicRouteTable
             SubnetId: !Ref PublicSubnet2
-    
-
     PrivateRouteTable1:
         Type: AWS::EC2::RouteTable
         Properties: 
@@ -191,43 +174,47 @@ Resources:
         Properties:
             RouteTableId: !Ref PrivateRouteTable2
             SubnetId: !Ref PrivateSubnet2
-            
-        #Cloud Watch Alarm to monitor perfomance
-        Type: AWS::CloudWatch::Alarm
-        Properties: 
-         ActionsEnabled: Boolean
-         AlarmActions:
-            - String
-         AlarmDescription: String
-         AlarmName: String
-         ComparisonOperator: String
-         DatapointsToAlarm: Integer
-         Dimensions: 
-            - Dimension
-    
-         EvaluateLowSampleCountPercentile: String
-         EvaluationPeriods: Integer
-         ExtendedStatistic: String
-         InsufficientDataActions: 
-             - String
-   
-         MetricName: String
-         Metrics:
-            - MetricDataQuery
-    
-         Namespace: String
-         OKActions:
-            - String
-    
-         Period: Integer
-         Statistic: String
-         Threshold: Double
-         ThresholdMetricId: String
-         TreatMissingData: String
-         Unit: String
+  
+Outputs:
+   # VPC WITH PRIVATE AND PUBLIC SUBNETS
+    VPC:
+        
+        Value: !Ref VPC
+        Export:
+            Name: !Sub ${EnvironmentName}-VPCID
 
+    PublicSubnets:
+        
+        Value: !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2 ]]
+        Export:
+            Name: !Sub ${EnvironmentName}-PUB-NETS
+    PrivateSubnets:
+       
+        Value: !Join [ ",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ]]
+        Export:
+            Name: !Sub ${EnvironmentName}-PRIV-NETS
 
-         #
+    PublicSubnet1:
+        Description: Public Subnet in availability zone 1
+        Value: !Ref PublicSubnet1
+        Export:
+            Name: !Sub ${EnvironmentName}-PUB1-SN
+    PublicSubnet2:
+        Description: Public Subnet in availability zone 2
+        Value: !Ref PublicSubnet2
+        Export:
+            Name: !Sub ${EnvironmentName}-PUB2-SN
+
+    PrivateSubnet1:
+        Description: Private Subnet in availability zone 1
+        Value: !Ref PrivateSubnet1
+        Export:
+            Name: !Sub ${EnvironmentName}-PRI1-SN
+    PrivateSubnet2:
+        Description: Public Subnet in availability zone 2
+        Value: !Ref PrivateSubnet2
+        Export:
+            Name: !Sub ${EnvironmentName}-PRI2-SN
 
  
 
